--- a/source/index.html
+++ b/source/index.html
@@ -30,6 +30,8 @@
             <span class="visually-hidden">Проект</span>
             <select name="project" class="filters__input">
               <option checked>Выберите проект</option>
+              <option>maffin.pw</option>
+              <option>amrita-dent</option>
             </select>
           </label>
           <label class="filters__item">
@@ -42,6 +44,8 @@
             <span class="visually-hidden">Фильтр по выполнению</span>
             <select name="project" class="filters__input">
               <option checked>Показать все</option>
+              <option>Выполненные</option>
+              <option>Не выполненные</option>
             </select>
           </label>
         </form>
@@ -85,40 +89,41 @@
       </section>
     </header>
     <section class="main__checklist checklist">
-      <h2 class="checklist__title">Проект: maffin.pw</h2>
+      <h2 class="checklist__title visually-hidden">Проект: maffin.pw</h2>
       <h3 class="checklist__subtitle">В процессе:</h3>
       <ul class="checklist__list">
         <li class="checklist__item">
           <div class="checklist__controls">
-            <button class="checklist__control checklist__control--edit">Редактировать</button>
-            <button class="checklist__control checklist__control--delete">Удалить</button>
+            <button class="checklist__control checklist__control--edit" aria-label="Редактировать"></button>
+            <button class="checklist__control checklist__control--delete" aria-label="Удалить"></button>
           </div>
           <label class="checklist__box">
-            <input type="checkbox" name="check-1" class="visually-hidden">
+            <input type="checkbox" name="check-1" class="checklist__checkbox visually-hidden">
             <span class="checklist__check-box"></span>
             <span class="checklist__name">Документ проходит проверку на валидность https://validator.w3.org/nu/</span>
           </label>
         </li>
-        <li class="checklist__item">
+        <li class="checklist__item checklist__item--showed">
           <div class="checklist__controls">
-            <button class="checklist__control checklist__control--edit">Редактировать</button>
-            <button class="checklist__control checklist__control--delete">Удалить</button>
+            <button class="checklist__control checklist__control--edit" aria-label="Редактировать"></button>
+            <button class="checklist__control checklist__control--delete" aria-label="Удалить"></button>
           </div>
           <label class="checklist__box">
-            <input type="checkbox" name="check-1" class="visually-hidden">
+            <input type="checkbox" name="check-2" class="checklist__checkbox visually-hidden">
             <span class="checklist__check-box"></span>
-            <span class="checklist__name">В разметке отсутствует дублирование кода для одного и того же элемента, с помощью
-              которого элемент отображается в разных местах...
+            <span class="checklist__name">В разметке отсутствует дублирование кода для одного и того же элемента, с помощью которого элемент
+              отображается в разных местах страницы на разных версиях: мобильной, десктопной, планшетной
             </span>
           </label>
+          <button class="checklist__show-button checklist__show-button--showed" aria-label="Скрыть"></button>
         </li>
         <li class="checklist__item">
           <div class="checklist__controls">
-            <button class="checklist__control checklist__control--edit">Редактировать</button>
-            <button class="checklist__control checklist__control--delete">Удалить</button>
+            <button class="checklist__control checklist__control--edit" aria-label="Редактировать"></button>
+            <button class="checklist__control checklist__control--delete" aria-label="Удалить"></button>
           </div>
           <label class="checklist__box">
-            <input type="checkbox" name="check-1" class="visually-hidden">
+            <input type="checkbox" name="check-3" class="checklist__checkbox visually-hidden">
             <span class="checklist__check-box"></span>
             <span class="checklist__name">Подключены правильные шрифты, их размеры, цвет и толщина равны соответствующим
               параметрам в макетах и техническом задании.
@@ -127,11 +132,11 @@
         </li>
         <li class="checklist__item">
           <div class="checklist__controls">
-            <button class="checklist__control checklist__control--edit">Редактировать</button>
-            <button class="checklist__control checklist__control--delete">Удалить</button>
+            <button class="checklist__control checklist__control--edit" aria-label="Редактировать"></button>
+            <button class="checklist__control checklist__control--delete" aria-label="Удалить"></button>
           </div>
           <label class="checklist__box">
-            <input type="checkbox" name="check-1" class="visually-hidden">
+            <input type="checkbox" name="check-4" class="checklist__checkbox visually-hidden">
             <span class="checklist__check-box"></span>
             <span class="checklist__name">Единообразное написание и форматирование кода в HTML, файлах CSS-препроцессора и
               JavaScript (включая файлы автоматизации).
@@ -141,50 +146,51 @@
       </ul>
       <h3 class="checklist__subtitle">Готово:</h3>
       <ul class="checklist__list">
-        <li class="checklist__item">
+        <li class="checklist__item checklist__item--complite">
           <div class="checklist__controls">
-            <button class="checklist__control checklist__control--edit">Редактировать</button>
-            <button class="checklist__control checklist__control--delete">Удалить</button>
+            <button class="checklist__control checklist__control--edit" aria-label="Редактировать"></button>
+            <button class="checklist__control checklist__control--delete" aria-label="Удалить"></button>
           </div>
           <label class="checklist__box">
-            <input type="checkbox" name="check-1" class="visually-hidden" checked>
+            <input type="checkbox" name="check-5" class="checklist__checkbox visually-hidden" checked>
             <span class="checklist__check-box"></span>
             <span class="checklist__name">Документ проходит проверку на валидность https://validator.w3.org/nu/</span>
           </label>
         </li>
-        <li class="checklist__item">
+        <li class="checklist__item checklist__item--complite">
           <div class="checklist__controls">
-            <button class="checklist__control checklist__control--edit">Редактировать</button>
-            <button class="checklist__control checklist__control--delete">Удалить</button>
+            <button class="checklist__control checklist__control--edit" aria-label="Редактировать"></button>
+            <button class="checklist__control checklist__control--delete" aria-label="Удалить"></button>
           </div>
           <label class="checklist__box">
-            <input type="checkbox" name="check-1" class="visually-hidden" checked>
+            <input type="checkbox" name="check-6" class="checklist__checkbox visually-hidden" checked>
             <span class="checklist__check-box"></span>
             <span class="checklist__name">В разметке есть правильный вьюпорт тег
               <code><meta name="viewport" content="width=device-width, initial-scale=1.0"></code></span>
             </span>
           </label>
         </li>
-        <li class="checklist__item">
+        <li class="checklist__item checklist__item--complite">
           <div class="checklist__controls">
-            <button class="checklist__control checklist__control--edit">Редактировать</button>
-            <button class="checklist__control checklist__control--delete">Удалить</button>
+            <button class="checklist__control checklist__control--edit" aria-label="Редактировать"></button>
+            <button class="checklist__control checklist__control--delete" aria-label="Удалить"></button>
           </div>
           <label class="checklist__box">
-            <input type="checkbox" name="check-1" class="visually-hidden" checked>
+            <input type="checkbox" name="check-7" class="checklist__checkbox visually-hidden" checked>
             <span class="checklist__check-box"></span>
             <span class="checklist__name">Для блока, у которого есть фоновое изображение, прописан фоновый цвет, который соответствует
               преобладающему...
             </span>
           </label>
+          <button class="checklist__show-button" aria-label="Показать весь текст"></button>
         </li>
-        <li class="checklist__item">
+        <li class="checklist__item checklist__item--complite">
           <div class="checklist__controls">
-            <button class="checklist__control checklist__control--edit">Редактировать</button>
-            <button class="checklist__control checklist__control--delete">Удалить</button>
+            <button class="checklist__control checklist__control--edit" aria-label="Редактировать"></button>
+            <button class="checklist__control checklist__control--delete" aria-label="Удалить"></button>
           </div>
           <label class="checklist__box">
-            <input type="checkbox" name="check-1" class="visually-hidden" checked>
+            <input type="checkbox" name="check-8" class="checklist__checkbox visually-hidden" checked>
             <span class="checklist__check-box"></span>
             <span class="checklist__name">Критическая функциональность сайта работоспособна без JavaScript (использовано прогрессивное улучшение).
             </span>
