стилизовал add-items

--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
       <section class="top__add-items add-items">
         <h2 class="visually-hidden">Добавление элементов</h2>
         <div class="add-items__item">
-          <button class="add-items__button add-items__button--project button">
+          <button class="add-items__button button">
             <svg class="button__icon" width="15" height="12">
               <use xlink:href="img/sprite.svg#icon-project"></use>
             </svg>
@@ -65,19 +65,19 @@
           </form>
         </div>
         <div class="add-items__item">
-          <button class="add-items__button add-items__button--project button">
+          <button class="add-items__button button">
             <svg class="button__icon" width="15" height="12">
               <use xlink:href="img/sprite.svg#icon-project"></use>
             </svg>
             <span class="button__text">Категория</span>
           </button>
-          <form action="/" class="add-items__input-box">
-            <input type="text" name="new_cathegory" placeholder="Новая категория">
-            <button type="submit" class="add-items__confirm">Подтвердить</button>
+          <form action="/" class="add-items__input-box add-items__input-box--showed">
+            <input type="text" class="add-items__input" name="new_cathegory" placeholder="Новая категория">
+            <button type="submit" class="add-items__confirm" aria-label="Подтвердить"></button>
           </form>
         </div>
         <div class="add-items__item">
-          <button class="add-items__button add-items__button--project button">
+          <button class="add-items__button button">
             <svg class="button__icon" width="13" height="14">
               <use xlink:href="img/sprite.svg#icon-card"></use>
             </svg>
