добавил вывод email

--- a/source/index.html
+++ b/source/index.html
@@ -18,6 +18,7 @@
         </a>
       </div>
       <a href="#" class="header__auth">
+        <span class="header__auth-text">a.vafin85@gmail.com</span>
         <svg class="header__auth-icon" width="20" height="20">
           <use xlink:href="img/sprite.svg#icon-login"></use>
         </svg>
@@ -32,7 +33,7 @@
             <label class="filters__item">
               <span class="visually-hidden">Проект</span>
               <select name="project" class="filters__input">
-                <option checked>Выберите проект</option>
+                <option checked>Проект</option>
                 <option>maffin.pw</option>
                 <option>amrita-dent</option>
               </select>
@@ -40,7 +41,7 @@
             <label class="filters__item">
               <span class="visually-hidden">Категория</span>
               <select name="project" class="filters__input">
-                <option checked>Выберите категорию</option>
+                <option checked>Категория</option>
               </select>
             </label>
             <label class="filters__item">
