стилизова тайтл в селекте

--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maffin - check list</title>
   <link rel="preload" href="fonts/Manrope-Regular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Manrope-Medium.woff2" as="font" crossorigin="anonymous">
   <link href="css/styles.min.css" rel="stylesheet">
 </head>
 
@@ -31,6 +32,7 @@
         <section class="top__filters filters">
           <form class="filters__form">
             <div class="item__select select">
+              <h3 class="select__title">Выберите проект:</h3>
               <div class="select__wrapper">
                 <div class="select__inner">
                   <p class="select__input" aria-label="Выберите проект" tabindex="0">По умолчанию</p>
