добавил блок закрытия чек листа

--- a/source/index.html
+++ b/source/index.html
@@ -122,6 +122,13 @@
       </header>
       <section class="main__checklist checklist">
         <h2 class="checklist__title visually-hidden">Проект: maffin.pw</h2>
+        <div class="checklist__complite">
+          <!-- <p class="checklist__complite-icon">Готово</p> -->
+
+          <svg class="checklist__complite-icon" width="200" height="200">
+            <use xlink:href="img/sprite.svg#icon-complite"></use>
+          </svg>
+        </div>
         <h3 class="checklist__subtitle">В процессе:</h3>
         <ul class="checklist__list">
           <li class="checklist__item">
