--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maffin - check list</title>
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/img/favicon/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="/img/favicon/site.webmanifest">
   <link rel="preload" href="fonts/Manrope-Regular.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/Manrope-Medium.woff2" as="font" crossorigin="anonymous">
   <link href="css/styles.min.css" rel="stylesheet">
@@ -123,8 +127,6 @@
       <section class="main__checklist checklist">
         <h2 class="checklist__title visually-hidden">Проект: maffin.pw</h2>
         <div class="checklist__complite">
-          <!-- <p class="checklist__complite-icon">Готово</p> -->
-
           <svg class="checklist__complite-icon" width="200" height="200">
             <use xlink:href="img/sprite.svg#icon-complite"></use>
           </svg>
