разметил и стилизовал about

--- a/source/index.html
+++ b/source/index.html
@@ -253,6 +253,23 @@
           </li>
         </ul>
       </section>
+      <div class="about-popup">
+        <h2 class="about-popup__title">О проекте</h2>
+        <p class="about-popup__text">
+          Этот проект создан frontend-разработчиком, для прокачки скилов и решении проблемы с проверкой своих проектов по определенным
+          критериям.<br><br>
+          Он продолжает развиваться, и в ближайших планах: личный кабинет пользователя, создание подкатегорий в проектах, фильтрация по выполненым и
+          не
+          выполенным, возможность делиться своими чек-листами и загрузка чеклистов из файлов.
+        </p>
+        <h3 class="about-popup__subtitle">О работе</h3>
+        <p class="about-popup__text">
+          Для не зарегистрированных пользователей доступно только пометить карточку выполненной/невыполненной, без сохранения прогресса.<br><br>
+          Для зарегестрированных пользователей дополнительно есть возможность создавать проекты и карточки, редактировать и удалять карточки, весь
+          прогресс сохраняется.
+        </p>
+        <button class="about-popup__button button">Приступим</button>
+      </div>
     </main>
     <footer class="footer">
       <div class="footer__copyright copyright container">
